# zed-opencv

./: .gitignore  CMakeLists.txt  ZED_TTS.py  run.sh
lib/: libdarknet-cpp-shared.so.3.1  libdarknet-cpp-shared.so.arm
src/: arapaho.cpp  arapaho.hpp  art.c  classifier.c  demo.c  image.c  image.h  main.cpp  voxel.c
